--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon (2).png" rel="icon">
 
   <!-- Google Fonts -->
   <link
@@ -50,13 +49,16 @@
         <img src="assets/img/276x276.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Tarek Hasan</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/TarekHa88792341" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/tarek.hasan.175" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/mohammadtarekhasan175/" class="instagram"><i
+          <a href="https://www.facebook.com/tarek.hasan.175" class="facebook" target="_blank"><i
+              class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/mohammadtarekhasan175/" class="instagram" target="_blank"><i
               class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/tarek-hasan-8b23a2243/" class="linkedin"><i
+          <a href="https://www.linkedin.com/in/tarek-hasan-8b23a2243/" class="linkedin" target="_blank"><i
               class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/tarekhasan175" class="github" target="_blank"><i
+              class="bx bxl-github"></i></a>
+          <a href="https://dribbble.com/tarek175" class="dribbble" target="_blank"><i
+              class="bx bxl-dribbble"></i></a>
         </div>
       </div>
 
@@ -67,7 +69,6 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -78,7 +79,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Tarek Hasan</h1>
-      <p>I'm <span class="typed" data-typed-items="UX/UI Designer, Graphics Designer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Web Developer, UX/UI Designer, Graphics Designer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -91,10 +92,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Hello..! I'm Tarek Hasan. I love to explore new things.UX/UI Design and Graphics Design is my passion and I
-            love to make new
-            designs and new things and techniques.I love to modern ui designing. I have almost 6 month of experience in
-            my passion. Happy Designing....!
+            <strong>Hello..! I'm Tarek Hasan.</strong> I love to explore new things.Web Development and UX/UI Design is my passion and I love to problem solving and make to new things and techniques.
           </p>
         </div>
 
@@ -105,15 +103,12 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              Hello..! I'm Tarek Hasan. I love to explore new things.UX/UI Design and Graphics Design is my passion and
-              I
-              love to make new.
+              Hello..! I'm Tarek Hasan. I love to explore new things.UX/UI Design and Graphics Design is my passion and I love to make new.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 10 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>web site comming</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1-10-2002</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+8801791775707</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span> Dhaka, Bangladesh</span></li>
                 </ul>
@@ -124,16 +119,9 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Honours(BBA)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tarekhn175@gmail.com</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
           </div>
         </div>
 
@@ -141,7 +129,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
-    <!--<section id="facts" class="facts">
+    <!-- <section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
@@ -209,17 +197,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Figma <i class="val">80%</i></span>
+              <span class="skill">Adobe Illustrator <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Adobe illustrator <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -232,12 +212,20 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Figma<i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">FIGJAM <i class="val">90%</i></span>
+              <span class="skill">HTML/CSS <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -245,17 +233,17 @@
             </div>
 
             <div class="progress">
-              <span class="skill">DIGITAL MARKETING <i class="val">70%</i></span>
+              <span class="skill">JAVASCRIPT <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML/CSS<i class="val">55%</i></span>
+              <span class="skill">BOOTSTRAP<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -273,67 +261,59 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>An individual with a keen interest in Software programs, possessing good interpersonal and analytical
+            skills, who
+            wishes to use technical knowledge catering to the needs of the company. I wish to work with a diverse
+            group of people and see myself heading a group of people.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>TAREK HASAN</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
-              <ul>
-                <li>HOUSE #54/8, ROAD 12, SHEKERTEK, ADABOR, MOHAMMODPUR, DHAKA-1207, BANGLADESH</li>
-                <li>+8801791775707</li>
-                <li>tarekhn175@gmail.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>BECHELOR OF BUSSINESS ADMISTRATION (ACCOUNTING)</h4>
-              <h5>2019-2020</h5>
-              <p><em>NATIONAL UNIVERSITY, Dhaka</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <p><em>NATIONAL UNIVERSITY, DHAKA</em></p>
+              <p>
+                <li>Session - 2019-2020</li>
+              </p>
             </div>
             <div class="resume-item">
               <h4>HIGHER SECONDARY CERTIFICATE (SCIENCE)</h4>
-              <h5>2017 - 2018</h5>
-              <p><em></em></p>CCN MODEL COLLEGE, KODBARI, COMILLA.
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <p><em>CCN MODEL COLLEGE, KODBARI, COMILLA.</em></p>
+              <p>
+                <li>Session - 2017-2018</li>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>SECONDARY SECONDARY CERTIFICATE (SCIENCE)</h4>
+              <p><em>DUARIA A.G. MODEL ACADEMY, DEBIDWER, COMILLA.</em></p>
+              <p>
+                <li>Session - 2015-2016</li>
+              </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>INTERNSHIP UX/UI DESIGNER.</h4>
-              <h5>2022 - Present</h5>
-              <p><em>NIFTY IT SOLUATION, DHAKA, BANGLADESH </em></p>
-              <ul>
-                <li>LEAD IN SOFTWARE DEVELOPMENT, WEB DEVELOPMENT, SPECIALLY WORK ON BUILD IN MOBILE APPS</li>
-              </ul>
+              <h4>UX/UI DESIGNER.</h4>
+              <p><em>NIFTY IT SOLUATION, DHAKA, BANGLADESH.</em></p>
+              <p>
+                <li>Dec'22 - Present</li>
+              </p>
+              <p>Design web-based and mobile applications. Worked on few mobile applications design.</p>
+
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>00000</h5>
-              <p><em>DHAKA</em></p>
-              <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam illo adipisci temporibus odio
-                  harum quam atque incidunt, accusantium tempore dicta fuga voluptas, porro magni, eius maiores
-                  reiciendis itaque amet ipsum.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores porro ipsum incidunt deserunt
-                  illo mollitia rerum, quia laudantium doloremque error optio aliquid consectetur illum, iure debitis.
-                  Quasi odit atque mollitia!</li>
-                <li></li>
-                <li></li>
-              </ul>
+              <h4>INTERNSHIP UX/UI DESIGNER.</h4>
+              <p><em>NIFTY IT SOLUATION, DHAKA, BANGLADESH.</em></p>
+              <p><li>Sep'22 - Nov'22</li></p>
+              <p>Created creative works on website and mobile applications design.</p>
+            </div>
+            <div class="resume-item">
+              <h4>GRAPHICS DESIGNER.</h4>
+              <p><em>ONLINE & LOCAL MARETPLACES.</em></p>
+              <p><li>Feb'22 - Sep'22</li></p>
+              <p>Created creative works on logo designing, apps screen design, web pages designing for different companies and brands.</p>
             </div>
           </div>
         </div>
@@ -766,7 +746,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.3663058741104!2d90.35392951462475!3d23.769966893946204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1d230bc299f%3A0x346c15cddfb57df5!2sDaily%20Shopping%20-%20Shekhertak%2012!5e0!3m2!1sen!2sbd!4v1668189007853!5m2!1sen!2sbd"
                 width="350" height="200" class="border border-info rounded" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-              
+
             </div>
 
           </div>
@@ -811,17 +791,17 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>tarekhasan2023</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
