--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Tarek Hasan's Protfolio.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon (2).png" rel="icon">
+  <link href="assets/img/Tarek H-01.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
@@ -55,10 +55,8 @@
               class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/tarek-hasan-8b23a2243/" class="linkedin" target="_blank"><i
               class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/tarekhasan175" class="github" target="_blank"><i
-              class="bx bxl-github"></i></a>
-          <a href="https://dribbble.com/tarek175" class="dribbble" target="_blank"><i
-              class="bx bxl-dribbble"></i></a>
+          <a href="https://github.com/tarekhasan175" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+          <a href="https://dribbble.com/tarek175" class="dribbble" target="_blank"><i class="bx bxl-dribbble"></i></a>
         </div>
       </div>
 
@@ -92,7 +90,8 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            <strong>Hello..! I'm Tarek Hasan.</strong> I love to explore new things.Web Development and UX/UI Design is my passion and I love to problem solving and make to new things and techniques.
+            <strong>Hello..! I'm Tarek Hasan.</strong> I love to explore new things.Web Development and UX/UI Design is
+            my passion and I love to problem solving and make to new things and techniques.
           </p>
         </div>
 
@@ -103,7 +102,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              Hello..! I'm Tarek Hasan. I love to explore new things.UX/UI Design and Graphics Design is my passion and I love to make new.
+              Hello..! I'm Tarek Hasan. I love to explore new things.UX/UI Design and Graphics Design is my passion and
+              I love to make new.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -306,14 +306,19 @@
             <div class="resume-item">
               <h4>INTERNSHIP UX/UI DESIGNER.</h4>
               <p><em>NIFTY IT SOLUATION, DHAKA, BANGLADESH.</em></p>
-              <p><li>Sep'22 - Nov'22</li></p>
+              <p>
+                <li>Sep'22 - Nov'22</li>
+              </p>
               <p>Created creative works on website and mobile applications design.</p>
             </div>
             <div class="resume-item">
               <h4>GRAPHICS DESIGNER.</h4>
               <p><em>ONLINE & LOCAL MARETPLACES.</em></p>
-              <p><li>Feb'22 - Sep'22</li></p>
-              <p>Created creative works on logo designing, apps screen design, web pages designing for different companies and brands.</p>
+              <p>
+                <li>Feb'22 - Sep'22</li>
+              </p>
+              <p>Created creative works on logo designing, apps screen design, web pages designing for different
+                companies and brands.</p>
             </div>
           </div>
         </div>
